deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-micro-function-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-micro-function
  template:
    metadata:
      labels:
        app: api-micro-function
    spec:
      containers:
      - name: api-micro-function
        image: anchayhua/api-micro-function
        ports:
        - containerPort: 8080
