service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-micro-function-service
spec:
  selector:
    app: api-micro-function  # Debes ajustar esto según las etiquetas de tus pods
  ports:
    - protocol: TCP
      port: 8080         # Puerto del servicio dentro del clúster
      targetPort: 8080   # Puerto en el contenedor del microservicio
  type: ClusterIP         # Tipo de servicio (puede cambiar según tus necesidades)
